# sifive-libc

./: README.md
cmake/toolchains/: SiFive-Linux-Toolsuite.cmake  SiFive-Metal-Toolsuite.cmake
src/: CMakeLists.txt  memchr_vext.S  memcmp_vext.S  memcpy_vext.S  memmove_vext.S  memset_vext.S  strcat_vext.S  strchr_vext.S  strcmp_vext.S  strcpy_vext.S  strlen_vext.S  strncat_vext.S  strncmp_vext.S  strncpy_vext.S  strnlen_vext.S
src/sys/: asm.h
